[fix] 페이지네이서 기능 수정